# scrawl2org

./: .gitignore  CLAUDE.md  DATABASE_SCHEMA.md  LLM_OCR.md  Makefile  README.md  metadata.json  pyproject.toml
scrawl2org/: __init__.py  database.py  extractor.py  kitty_display.py  llm_ocr.py  main.py  ocr.py  processor.py
tests/: __init__.py  test_database.py  test_extractor.py  test_kitty_display.py  test_llm_ocr.py  test_main.py  test_ocr.py  test_processor.py
