[project]
name = "scrawl2org"
version = "0.3.0"
description = "Extract PDF pages as images and store in SQLite database"
authors = [
    {name = "Danny O'Brien", email = "danny@spesh.com"},
]
dependencies = [
    "pymupdf>=1.23.0",
    "click>=8.1.0",
    "llm>=0.15.0",
    "llm-gemini>=0.1.0",
]
requires-python = ">=3.8"

[project.scripts]
scrawl2org = "scrawl2org.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False in tests is fine

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Suppress harmless SWIG deprecation warnings from PyMuPDF
    # See: https://github.com/pymupdf/PyMuPDF/issues/3931
    "ignore:.*builtin type.*has no __module__ attribute.*:DeprecationWarning",
    "ignore:.*type.*has no __module__ attribute.*:DeprecationWarning"
]
